--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
@@ -24,6 +25,7 @@
     "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.2",
     "style-components": "^0.1.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
